--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+
 }
 
 dependencies {
@@ -14,8 +15,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '4.3.3'
+    testImplementation group: 'org.testng', name: 'testng', version: '7.4.0'
 }
 
 test {
-    useJUnitPlatform()
+    //useJUnitPlatform()
+    useTestNG()
 }
