Adicionada consulta de dois produtos dentro do site '(RO e PW)'

--- a/build.gradle
+++ b/build.gradle
@@ -22,4 +22,8 @@ dependencies {
 test {
     //useJUnitPlatform()
     useTestNG()
+    filter{
+    excludeTestsMatching "*apiTest*"
+    excludeTestsMatching "*TestaCalc*"
+    }
 }
