--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     testImplementation group: 'org.testng', name: 'testng', version: '7.4.0'
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
     implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
+    implementation group: 'com.opencsv', name: 'opencsv', version: '4.6'
 }
 
 test {
