--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-context', version: '5.3.8'
     implementation group: 'com.aventstack', name: 'extentreports', version: '3.0.7'
     implementation group: 'com.vimalselvam', name: 'cucumber-extentsreport', version: '3.1.1'
+    implementation group: 'io.appium', name: 'java-client', version: '7.5.1'
+
 }
 
 test {
